Revert "Move ambient display to display"
This reverts commit c01006351d33aff8c19806b6df8895d99992fc53.

--- a/doze/AndroidManifest.xml
+++ b/doze/AndroidManifest.xml
@@ -36,7 +36,10 @@
             </intent-filter>
             <meta-data
                 android:name="com.android.settings.category"
-                android:value="com.android.settings.category.ia.display" />
+                android:value="com.android.settings.category.device" />
+            <meta-data
+                android:name="com.android.settings.icon"
+                android:resource="@drawable/ic_settings_doze" />
         </activity>
 
     </application>
